# SyncRPC

./: .gitignore  README.md  build_server.sh  gen.sh  makefile  meson.build  protorpc_client.cpp  protorpc_server.cpp  router_cilent.h  router_server.h
back/: makefile
handler/: client_func_test.h  client_handler.h  server_func_login.h  server_handler.h
proto/: base.proto  protoc.sh
src/client/: protorpc_client.cpp
src/client/handler/: client_func_test.h  client_handler.h
src/include/: router_cilent.h  router_server.h
src/server/: protorpc_server.cpp
src/server/handler/: server_func_login.h  server_handler.h
